# trashcli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/trashcli/: cli.py  trash.py
src/trashcli/commands/: empty.py  list.py  remove.py  restore.py  trash.py
tests/: test_trash.py
