[project]
name = "trashcli"
version = "0.1.0"
description = "A modern CLI tool for safely moving files to trash"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
trash = "trashcli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trashcli"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
